--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -159,7 +159,7 @@
                                 <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Alamat</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
+                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Informasi Alamat Penagihan</a>
                             </li>
                             <li class="nav-item col-md-3">
                                 <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Dokumen</a>
@@ -177,11 +177,11 @@
                       <div class="form-group">
                         <div class="col-md-6 no-padding-left">
                           <label for="" class="">Longitude</label>
-                          <input type="text" id="" class="form-control" placeholder="">
+                          <input type="text" id="" class="form-control" placeholder="" readonly>
                         </div>
                         <div class="col-md-6 no-padding-right">
                           <label for="" class="">Latitude</label>
-                          <input type="text" id="" class="form-control" placeholder="">
+                          <input type="text" id="" class="form-control" placeholder="" readonly>
                         </div>
                       </div>
                     </div>
@@ -226,9 +226,8 @@
                         <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
                       <div class="form-group">
-                        <label for="" class="">Kode Pos<span class="text-danger"> *</span></label>
-                        <input type="text" id="" class="form-control" placeholder="" required>
-                        <div class="invalid-feedback">Mohon isi kolom ini</div>
+                        <label for="" class="">Kode Pos</label>
+                        <input type="text" id="" class="form-control" placeholder="" readonly>
                       </div>
                     </div>
                   </form>
@@ -236,7 +235,7 @@
                 <div class="card-footer">
                   <div class="row no-margin">
                     <div class="col no-padding-left"><a href="ubah-profil-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
-                    <div class="col no-padding-right"><a href="ubah-lahan-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
+                    <div class="col no-padding-right"><a href="ubah-penagihan-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
                   </div>
                 </div>
               </div>
