--- a/ubah-penagihan-pabrik.html
+++ b/ubah-penagihan-pabrik.html
@@ -159,7 +159,7 @@
                                 <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Alamat</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
+                                <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Informasi Alamat Penagihan</a>
                             </li>
                             <li class="nav-item col-md-3">
                                 <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Dokumen</a>
@@ -184,11 +184,28 @@
                               <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                       </div>
+                      <div class="form-group">
+                          <label for="" class="">Email<span class="text-danger"> *</span></label>
+                          <input type="email" id="" class="form-control" placeholder="Email" required>
+                          <div class="invalid-feedback">Mohon isi kolom ini</div>
+                      </div>
                     </div>
                     <div class="col-md-4">
                       <div class="form-group">
-                          <label for="" class="">Kapasitas<span class="text-danger"> *</span></label>
-                          <select class="form-control no-margin" id="inputGroupSelect">
+                          <label for="" class="">Nama PIC<span class="text-danger"> *</span></label>
+                          <input type="text" id="" class="form-control" placeholder="Nama PIC" required>
+                          <div class="invalid-feedback">Mohon isi kolom ini</div>
+                      </div>
+                      <div class="form-group">
+                          <label for="" class="">Phone<span class="text-danger"> *</span></label>
+                          <input type="text" id="" class="form-control" placeholder="Nomor Telepon" required>
+                          <div class="invalid-feedback">Mohon isi kolom ini</div>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="form-group">
+                          <label for="" class="">Bagian<span class="text-danger"> *</span></label>
+                          <select class="form-control no-margin" id="">
                             <option selected>- Pilih -</option>
                             <option value="5">5</option>
                             <option value="10">10</option>
@@ -200,14 +217,17 @@
                           </label>
                           <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
-                    </div>
-                    <div class="col-md-4">
+                      <div class="form-group">
+                          <label for="" class="">Fax<span class="text-danger"> *</span></label>
+                          <input type="text" id="" class="form-control" placeholder="Nomor Fax" required>
+                          <div class="invalid-feedback">Mohon isi kolom ini</div>
+                      </div>
                     </div>
                   </form>
                 </div>
                 <div class="card-footer">
                   <div class="row no-margin">
-                    <div class="col no-padding-left"><a href="ubah-lahan-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
+                    <div class="col no-padding-left"><a href="ubah-alamat-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
                     <div class="col no-padding-right"><a href="ubah-dokumen-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
                   </div>
                 </div>
