--- a/ubah-profil-pabrik.html
+++ b/ubah-profil-pabrik.html
@@ -159,7 +159,7 @@
                                 <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Alamat</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
+                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Informasi Alamat Penagihan</a>
                             </li>
                             <li class="nav-item col-md-3">
                                 <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Dokumen</a>
@@ -195,6 +195,20 @@
                       <div class="form-group">
                           <label for="" class="">Website<span class="text-danger"> *</span></label>
                           <input type="text" id="" class="form-control" placeholder="www.perusahaan.com" required>
+                          <div class="invalid-feedback">Mohon isi kolom ini</div>
+                      </div>
+                      <div class="form-group">
+                          <label for="" class="">Kapasitas<span class="text-danger"> *</span></label>
+                          <select class="form-control no-margin" id="inputGroupSelect">
+                            <option selected>- Pilih -</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                          </select>
+                          <label class="checkwrap mt-2">
+                              <input type="checkbox" value=""> Line Extendable
+                              <span class="checkmark"></span>
+                          </label>
                           <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
                     </div>
