--- a/ubah-dokumen-pabrik.html
+++ b/ubah-dokumen-pabrik.html
@@ -159,7 +159,7 @@
                                 <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Alamat</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
+                                <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Informasi Alamat Penagihan</a>
                             </li>
                             <li class="nav-item col-md-3">
                                 <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Dokumen</a>
@@ -176,38 +176,16 @@
                         <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
                       <div class="form-group">
-                        <form>
-                          <p>Akta Perusahaan<span class="text-danger"> *</span></p>
-                          <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="customFile" name="filename">
-                            <label class="custom-file-label" for="customFile">Tidak ada data</label>
-                          </div>
-                          <p class="hint-text">Tipe file png/jpeg/jpg, setiap foto berukuran maksimal 2Mb</p>
-                        </form>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="form-group">
                         <label for="" class="">No. Izin Berusaha<span class="text-danger"> *</span></label>
                         <input type="text" id="" class="form-control" placeholder="" required>
                         <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
+                    </div>
+                    <div class="col-md-4">
                       <div class="form-group">
                         <label for="" class="">Nama Akun Bank<span class="text-danger"> *</span></label>
                         <input type="text" id="" class="form-control" placeholder="" required>
                         <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="form-group">
-                        <form>
-                          <p>SIUP Pengolahan<span class="text-danger"> *</span></p>
-                          <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="customFile" name="filename">
-                            <label class="custom-file-label" for="customFile">Tidak ada data</label>
-                          </div>
-                          <p class="hint-text">Tipe file png/jpeg/jpg, setiap foto berukuran maksimal 2Mb</p>
-                        </form>
                       </div>
                       <div class="form-group">
                         <label for="" class="">No. Rekening<span class="text-danger"> *</span></label>
@@ -215,11 +193,47 @@
                         <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
                     </div>
+                    <div class="col-md-4">
+                      <div class="form-group">
+                        <form>
+                          <b>Dokumen Kepemilikan<span class="text-danger"> *</span></b>
+                          <p class="hint-text">Tipe file png/jpeg/jpg, setiap foto berukuran maksimal 2Mb</p>
+                          <div class="custom-file-2">
+                            <input type="file" class="custom-file-input" id="customFile" name="filename">
+                            <label class="custom-file-label" for="customFile"></label>
+                          </div>
+                          <div class="uploaded-file">
+                            <span>
+                              <p class="mb-1">Sertifikat Hak Milik (SHM)</p>
+                              <h6>INV/202008004/XX/VIII/597807677</h6>
+                            </span>
+                            <a type="button"><span class="ic-round-pencil"></span></a>
+                            <a type="button"><span class="ic-round-delete"></span></a>
+                          </div>
+                          <div class="uploaded-file">
+                            <span>
+                              <p class="mb-1">Sertifikat Hak Milik (SHM)</p>
+                              <h6>INV/202008004/XX/VIII/597807677</h6>
+                            </span>
+                            <a type="button"><span class="ic-round-pencil"></span></a>
+                            <a type="button"><span class="ic-round-delete"></span></a>
+                          </div>
+                          <div class="uploaded-file">
+                            <span>
+                              <p class="mb-1">Sertifikat Hak Milik (SHM)</p>
+                              <h6>INV/202008004/XX/VIII/597807677</h6>
+                            </span>
+                            <a type="button"><span class="ic-round-pencil"></span></a>
+                            <a type="button"><span class="ic-round-delete"></span></a>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
                   </form>
                 </div>
                 <div class="card-footer">
                   <div class="row no-margin">
-                    <div class="col no-padding-left"><a href="ubah-dokumen-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
+                    <div class="col no-padding-left"><a href="ubah-penagihan-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
                     <div class="col no-padding-right"><a href="" class="btn btn-primary btn-block">Simpan</a></div>
                   </div>
                 </div>
