--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                             </label>
                             <a href="lupa-password.html" class="forgot-pass-text float-right">Lupa Kata Sandi</a>
                         </div>
-                        <a href="index.html" class="btn btn-primary btn-block mb-3">Masuk</a>
+                        <a data-toggle="modal" data-target="#newWarning" class="btn btn-primary btn-block mb-3">Masuk</a>
                         <a href="index.html" class="btn btn-secondary btn-block mb-3">Kembali</a>
                         <div class="text-center">Belum punya akun?<a href="register.html" class="font-italic"> Daftar</a></div>
                     </form>
@@ -58,6 +58,34 @@
   
     </footer>
     <!-- Footer -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="newWarning" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="newWarningLabel" aria-hidden="true">
+        <div class="modal-dialog modal-md">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="popup-img">
+                        <img src="assets/img/popup-confirm.png" alt="">
+                    </div>
+                    <div class="col-md-12 text-center mb-3 px-4">
+                        <h6 class="font-weight-bold mb-1">No. Telepon Belum Terdaftar</h6>
+                        <p>Lanjut daftar dengan no. Telepon ini? 08123456789</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="row no-margin">
+                        <div class="col pl-0">
+                            <a data-dismiss="modal" class="btn btn-secondary btn-block">Ubah</a>
+                        </div>
+                        <div class="col pr-0">
+                            <a href="index.html" class="btn btn-secondary-gradient btn-block">Ya, Lanjutkan</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <!-- Library  -->
