--- a/kelola-pengguna.html
+++ b/kelola-pengguna.html
@@ -296,24 +296,12 @@
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="">Provinsi<span class="text-danger"> *</span></label>
-                            <select class="form-control no-margin" id="inputGroupSelect">
-                              <option selected>- Pilih -</option>
-                              <option value="5">5</option>
-                              <option value="10">10</option>
-                              <option value="15">15</option>
-                            </select>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                            <label for="" class="">Provinsi</label>
+                            <input type="text" id="" class="form-control" placeholder="" value="" readonly>
                         </div>
                         <div class="form-group">
-                            <label for="" class="">Kabupaten<span class="text-danger"> *</span></label>
-                            <select class="form-control no-margin" id="inputGroupSelect">
-                              <option selected>- Pilih -</option>
-                              <option value="5">5</option>
-                              <option value="10">10</option>
-                              <option value="15">15</option>
-                            </select>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                            <label for="" class="">Kabupaten</label>
+                            <input type="text" id="" class="form-control" placeholder="" value="" readonly>
                         </div>
                       </div>
                     </div>
@@ -341,7 +329,7 @@
             <div class="modal-footer">
               <div class="row no-margin">
                   <div class="col pl-0">
-                      <a  href="" class="btn btn-secondary btn-block">Kembali</a>
+                      <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
                   </div>
                   <div class="col pr-0">
                       <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
@@ -394,24 +382,12 @@
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                         </div>
                         <div class="form-group">
-                            <label for="" class="">Provinsi<span class="text-danger"> *</span></label>
-                            <select class="form-control no-margin" id="inputGroupSelect">
-                              <option>- Pilih -</option>
-                              <option selected value="5">Aceh</option>
-                              <option value="10">10</option>
-                              <option value="15">15</option>
-                            </select>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                            <label for="" class="">Provinsi</label>
+                            <input type="text" id="" class="form-control" placeholder="" value="" readonly>
                         </div>
                         <div class="form-group">
-                            <label for="" class="">Kabupaten<span class="text-danger"> *</span></label>
-                            <select class="form-control no-margin" id="inputGroupSelect">
-                              <option>- Pilih -</option>
-                              <option selected value="5">Kabupaten Aceh Timur</option>
-                              <option value="10">10</option>
-                              <option value="15">15</option>
-                            </select>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                            <label for="" class="">Kabupaten</label>
+                            <input type="text" id="" class="form-control" placeholder="" value="" readonly>
                         </div>
                       </div>
                     </div>
@@ -445,7 +421,7 @@
             <div class="modal-footer">
               <div class="row no-margin">
                   <div class="col pl-0">
-                      <a  href="" class="btn btn-secondary btn-block">Kembali</a>
+                      <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
                   </div>
                   <div class="col pr-0">
                       <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
