--- a/register.html
+++ b/register.html
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <div class="row no-margin">
+                    <div class="row w-100 no-margin">
                         <div class="col">
                             <a data-dismiss="modal" class="btn btn-secondary-gradient btn-block">Oke</a>
                         </div>
