--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <div class="row no-margin">
+                    <div class="row w-100 no-margin">
                         <div class="col pl-0">
                             <a data-dismiss="modal" class="btn btn-secondary btn-block">Ubah</a>
                         </div>
