--- a/ubah-penagihan-pabrik.html
+++ b/ubah-penagihan-pabrik.html
@@ -116,7 +116,7 @@
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="">
+                <a class="dropdown-item" href="profile.html">
                 Profile
                 </a>
                 <a class="dropdown-item" href="settings.html">
