--- a/profil-pabrik.html
+++ b/profil-pabrik.html
@@ -339,7 +339,8 @@
                         <div class="col-md-4">
                           <div class="form-group">
                             <label for="" class="">Titik Koordinat</label>
-                              <div id="map" style="height: 220px;"></div>
+                              <!-- <div id="map" style="height: 220px;"></div> -->
+                              <div id="mapProfile" style="height: 220px;"></div>
                           </div>
                           <div class="form-group">
                             <div class="col-md-6 no-padding-left">
@@ -484,6 +485,7 @@
     <script src="assets/libs/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
     <script src="assets/libs/datatables-responsive/js/dataTables.responsive.min.js"></script>
     <script src="assets/libs/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script>
     $(function () {
       $("#pabrik").DataTable({
@@ -491,6 +493,31 @@
        
       });
     });
+    </script>
+    <script>
+      var map = new google.maps.Map(document.getElementById('mapProfile'), {
+      zoom: 15,
+      center: new google.maps.LatLng(-6.1754, 106.8272),
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+      });
+
+      var myMarker = new google.maps.Marker({
+          position: new google.maps.LatLng(-6.1754, 106.8272),
+          draggable: true
+      });
+      google.maps.event.addListener(myMarker, 'dragend', function (evt) {
+          document.getElementById('dragStatus').innerHTML = '<div class="container no-padding"><div class="col-md-6 no-padding-left"><label>Longitude</label><div class="clearfix"></div><div class="disable-longlat">' + evt.latLng.lat().toFixed(4) + '</div></div> <div class="col-md-6 no-padding-right"><label>Latitude</label><div class="clearfix"></div><div class="disable-longlat">' + evt.latLng.lng().toFixed(4) + '</div></div></div>';
+          var point = marker.getPosition();
+            map.panTo(point);
+      });
+
+      google.maps.event.addListener(myMarker, 'dragstart', function (evt) {
+          //-------------
+          //------------
+      });
+
+      map.setCenter(myMarker.position);
+      myMarker.setMap(map);
     </script>
 </body>
 </html>
