--- a/petani.html
+++ b/petani.html
@@ -157,6 +157,7 @@
                       <tr>
                         <th>No</th>
                         <th>Nama Lengkap</th>
+                        <th>Level</th>
                         <th>No. KTP</th>
                         <th>No. Telepon</th>
                         <th>Nama PKS</th>
@@ -172,6 +173,9 @@
                       <tr>
                         <td>1</td>
                         <td>Sarman</td>
+                        <td>
+                          <span class="fa fa-star green"></span>
+                        </td>
                         <td>3320050909790004</td>
                         <td>08123456789</td>
                         <td>PT Padang Palma</td>
@@ -185,6 +189,10 @@
                       <tr>
                         <td>2</td>
                         <td>Andika</td>
+                        <td>
+                          <span class="fa fa-star green"></span>
+                          <span class="fa fa-star green"></span>
+                        </td>
                         <td>3320050983790002</td>
                         <td>08281234577</td>
                         <td>PT Padang Palma</td>
@@ -198,6 +206,11 @@
                       <tr>
                         <td>3</td>
                         <td>Rahmawati</td>
+                        <td>
+                          <span class="fa fa-star green"></span>
+                          <span class="fa fa-star green"></span>
+                          <span class="fa fa-star green"></span>
+                        </td>
                         <td>3320050933790012</td>
                         <td>08982388321</td>
                         <td>PT Padang Palma</td>
