--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -116,7 +116,7 @@
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="profile.html">
+                <a class="dropdown-item" href="">
                 Profile
                 </a>
                 <a class="dropdown-item" href="settings.html">
@@ -297,7 +297,8 @@
 
 
     <!-- jQuery -->
-    <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script>
+    <!-- <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGznlSH8G4hLzYg5jGPEHikK5ORzJFrYo" type="text/javascript"></script>
     <script>
       var map = new google.maps.Map(document.getElementById('mapBox'), {
       zoom: 15,
@@ -344,7 +345,6 @@
     $(function () {
       $("#pabrik").DataTable({
         "scrollX": true
-       
       });
     });
     </script>
