--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -300,6 +300,7 @@
     <!-- <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGznlSH8G4hLzYg5jGPEHikK5ORzJFrYo"  async defer  type="text/javascript"></script>
     <script>
+      function initialize() {
       var map = new google.maps.Map(document.getElementById('mapBox'), {
       zoom: 15,
       center: new google.maps.LatLng(-6.1754, 106.8272),
@@ -323,6 +324,7 @@
 
       map.setCenter(myMarker.position);
       myMarker.setMap(map);
+      }
     </script>
     <script src="assets/libs/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
