--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -298,7 +298,8 @@
 
     <!-- jQuery -->
     <!-- <script src="http://maps.google.com/maps/api/js?sensor=false&.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initialize" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGznlSH8G4hLzYg5jGPEHikK5ORzJFrYo&callback=initialize" async defer></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGznlSH8G4hLzYg5jGPEHikK5ORzJFrYo"  async defer  type="text/javascript"></script> -->
     <script>
       function initialize() {
       var map = new google.maps.Map(document.getElementById('mapBox'), {
