--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -336,6 +336,13 @@
                     </table>
                   </div>
               </div>
+              <div class="modal-footer">
+                <div class="row no-margin">
+                    <div class="col pl-0">
+                        <a data-dismiss="modal" class="btn btn-secondary-gradient btn-block">Tutup</a>
+                    </div>
+                </div>
+              </div>
           </div>
       </div>
     </div>
