--- a/list-harga.html
+++ b/list-harga.html
@@ -175,6 +175,7 @@
                 <th>No</th>
                 <th>Harga TBS</th>
                 <th>Tanggal</th>
+                <th>Aksi</th>
               </tr>
               </thead>
               <tbody>
@@ -182,16 +183,19 @@
                 <td>1</td>
                 <td>Rp 1.485,72</td>
                 <td>08/09/2020</td>
+                <td><a type="button" data-toggle="modal" data-target="#editPrice"><span class="fa fa-pencil orange ml-2"></span></a></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Rp 1.860,43</td>
                 <td>07/09/2020</td>
+                <td><a type="button" data-toggle="modal" data-target="#editPrice"><span class="fa fa-pencil orange ml-2"></span></a></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Rp 1.648,80</td>
                 <td>06/09/2020</td>
+                <td><a type="button" data-toggle="modal" data-target="#editPrice"><span class="fa fa-pencil orange ml-2"></span></a></td>
               </tr>
               
               </tbody>
@@ -220,46 +224,86 @@
 
     </footer>
     <!-- Footer -->
-  <!-- Modal -->
-  <div class="modal fade" id="addPrice" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="addPriceLabel" aria-hidden="true">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content">
-            <div class="modal-header bg-hijau">
-                <h6 class="modal-title" id="addPriceLabel">Detail Penerimaan</h6>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="col-md-12 no-padding">
-                      <h6 class="green font-weight-bold mb-3">Petani</h6>
-                      <div class="form-group">
-                          <label class="">Harga TBS<span class="text-danger"> *</span></label>
-                          <input type="text" class="form-control" required>
-                          <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
-                      <div class="form-group">
-                          <label class="">Tanggal<span class="text-danger"> *</span></label>
-                          <input type="date" class="form-control" required>
-                          <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-              <div class="row no-margin">
-                  <div class="col pl-0">
-                      <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
-                  </div>
-                  <div class="col pr-0">
-                      <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
-                  </div>
+    <!-- Modal -->
+    <div class="modal fade" id="addPrice" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="addPriceLabel" aria-hidden="true">
+      <div class="modal-dialog modal-md">
+          <div class="modal-content">
+              <div class="modal-header bg-hijau">
+                  <h6 class="modal-title" id="addPriceLabel">Tambah Harga</h6>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
               </div>
-            </div>
-        </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="col-md-12 no-padding">
+                        <!-- <h6 class="green font-weight-bold mb-3">Petani</h6> -->
+                        <div class="form-group">
+                            <label class="">Harga TBS<span class="text-danger"> *</span></label>
+                            <input type="text" class="form-control" required>
+                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="">Tanggal<span class="text-danger"> *</span></label>
+                            <input type="date" class="form-control" required>
+                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+              <div class="modal-footer">
+                <div class="row no-margin">
+                    <div class="col pl-0">
+                        <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
+                    </div>
+                    <div class="col pr-0">
+                        <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
+                    </div>
+                </div>
+              </div>
+          </div>
+      </div>
     </div>
-  </div>
+
+    <div class="modal fade" id="editPrice" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="editPriceLabel" aria-hidden="true">
+      <div class="modal-dialog modal-md">
+          <div class="modal-content">
+              <div class="modal-header bg-hijau">
+                  <h6 class="modal-title" id="editPriceLabel">Edit Harga</h6>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="col-md-12 no-padding">
+                        <!-- <h6 class="green font-weight-bold mb-3">Petani</h6> -->
+                        <div class="form-group">
+                            <label class="">Harga TBS<span class="text-danger"> *</span></label>
+                            <input type="text" class="form-control" value="1.767,23" required>
+                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                        </div>
+                        <div class="form-group">
+                            <label class="">Tanggal<span class="text-danger"> *</span></label>
+                            <input type="date" class="form-control" value="2020-09-08" required>
+                            <div class="invalid-feedback">Mohon isi kolom ini</div>
+                        </div>
+                      </div>
+                  </form>
+              </div>
+              <div class="modal-footer">
+                <div class="row no-margin">
+                    <div class="col pl-0">
+                        <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
+                    </div>
+                    <div class="col pr-0">
+                        <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
+                    </div>
+                </div>
+              </div>
+          </div>
+      </div>
+    </div>
   </div>
 
   <!-- jQuery -->
