add password toggle

--- a/dashboard.html
+++ b/dashboard.html
@@ -302,7 +302,7 @@
                                     <h6 class="card-title pl-0 col-md-6">Top 5 Supplier</h6>
                                     <h6 class="card-title pl-4 col-md-6">Perbandingan</h6>
                                 </div>
-                                <div class="row no-margin">
+                                <div class="row top-5 no-margin">
                                     <div class="col-md-6">
                                         <table id="top5" class="table nowrap mb-0"  style="width:100%" >
                                         <thead>
