--- a/register.html
+++ b/register.html
@@ -127,8 +127,30 @@
         </div>
     </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <!-- Library  -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- jQuery -->
+  <script src="assets/libs/jquery/jquery.min.js"></script>
+  <!-- jQuery UI 1.11.4 -->
+  <script src="assets/libs/jquery-ui/jquery-ui.min.js"></script>
+  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+  <script>
+      $.widget.bridge('uibutton', $.ui.button)
+  </script>
+  <!-- Bootstrap 4 -->
+  <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <script src="assets/js/adminlte.min.js"></script>
+  <script src="assets/js/demo.js"></script>
+  <script>
+      $(".toggle-password").click(function() {
+
+          $(this).toggleClass("fa-eye fa-eye-slash");
+          var input = $($(this).attr("toggle"));
+          if (input.attr("type") == "password") {
+          input.attr("type", "text");
+          } else {
+          input.attr("type", "password");
+          }
+      });
+  </script>
 </body>
 </html>
