--- a/approval-penerimaan-petani.html
+++ b/approval-penerimaan-petani.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Yotani Niaga | Penerimaan Dari Petani</title>
+  <title>Yotani Niaga | Approval Penerimaan Dari Petani</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">  
