--- a/list-penerimaan-tbs.html
+++ b/list-penerimaan-tbs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Yotani Niaga | Penerimaan Dari Petani</title>
+  <title>Yotani Niaga | Daftar Penerimaan TBS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">  
@@ -143,7 +143,7 @@
         <div aria-label="breadcrumb" class="row">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="transaksi.html">Transaksi</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Penerimaan Dari Petani</li>
+            <li class="breadcrumb-item active" aria-current="page">Daftar Penerimaan TBS</li>
           </ol>
         </div>
       </div>
