add page daftar hutang, update datatable

--- a/list-penerimaan-tbs.html
+++ b/list-penerimaan-tbs.html
@@ -382,6 +382,15 @@
     $("#pabrik").DataTable({
       "scrollX": true,
       "bFilter": true,
+      "language": {
+        "search": "Cari",
+        "lengthMenu": "Tampilkan _MENU_",
+        "info": "Menampilkan _START_ sampai _END_ dari _TOTAL_ data",
+        "paginate": {
+          "next":       "Berikutnya",
+          "previous":   "Sebelumnya"
+        },
+      },
      
     });
     $("#pabrik-modal").DataTable({
