--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -374,6 +374,15 @@
     $("#pabrik").DataTable({
       "scrollX": true,
       "bFilter": true,
+      "language": {
+        "search": "Cari",
+        "lengthMenu": "Tampilkan _MENU_",
+        "info": "Menampilkan _START_ sampai _END_ dari _TOTAL_ data",
+        "paginate": {
+          "next":       "Berikutnya",
+          "previous":   "Sebelumnya"
+        },
+      },
      
     });
     $("#pabrik-modal").DataTable({
@@ -381,6 +390,15 @@
       "bLengthChange": false,
       "searching": false,
       "bInfo": false,
+      "language": {
+        "search": "Cari",
+        "lengthMenu": "Tampilkan _MENU_",
+        "info": "Menampilkan _START_ sampai _END_ dari _TOTAL_ data",
+        "paginate": {
+          "next":       "Berikutnya",
+          "previous":   "Sebelumnya"
+        },
+      },
       
     });
   });
