--- a/report.html
+++ b/report.html
@@ -298,7 +298,16 @@
   <script>
   $(function () {
     $("#pabrik").DataTable({
-      "scrollX": true
+      "scrollX": true,
+      "language": {
+        "search": "Cari",
+        "lengthMenu": "Tampilkan _MENU_",
+        "info": "Menampilkan _START_ sampai _END_ dari _TOTAL_ data",
+        "paginate": {
+          "next":       "Berikutnya",
+          "previous":   "Sebelumnya"
+        },
+      },
      
     });
   });
